Keep native logging compatible with Android 8